fixed some alignment issues in css files

--- a/src/Components/Ballot/Ballot.css
+++ b/src/Components/Ballot/Ballot.css
@@ -29,7 +29,9 @@
 } 
 
 @media (max-width: 1500px) {
-  .nominee-cards-container {justify-content: space-evenly;}
+  .nominee-cards-container {
+    justify-content: space-evenly;
+  }
 }
 
 @media (max-width: 1000px) {
